--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          # role-to-assume: arn:aws:iam::174607920130:role/YOUR_GITHUB_ACTIONS_ROLE
+          role-to-assume: arn:aws:iam::174607920130:role/LabRole
           aws-region: us-east-1
 
       - name: Terraform Init
